smoll error fixes

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -44,10 +44,10 @@
     "server_error": "Server error.",
     "common_errors":"Common errors:",
     "posible_error0":"- Your file is too big, try a smaller image.",
-    "posible_error1":"- The server has decided to die and I'll have to fix it, try again later.",
-    "posible_error2":"- Your app may be outdated, I recomend updating to the latest version in order to process your image on the server.",
-    "posible_error3":"- Mantainace or updates are being deployed on the server, try again later.",
-    "posible_error4":"- Keeping the server has become to expensive so I decided to stop the service and it may never return. I hope that this last one never happens, but in case it does you may still be able to process your images on your device.",
+    "posible_error1":"- The server has decided to die and I'll have to fix it.",
+    "posible_error2":"- Connection to server unestable or lost.",
+    "posible_error3":"- Mantainace or updates are being deployed on the server.",
+    "posible_error4":"Try again later",
 
     "server_image_error":"Error ocurred while processing your image.",
     "large_errors":"Your image may be too big. Or the server is too busy.",
