--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -44,10 +44,10 @@
     "server_error": "Error de servidor.",
     "common_errors":"Errores comúnes",
     "posible_error0":"- Tu archivo es muy grande, intenta con uno más pequeño.",
-    "posible_error1":"- El servidor ha decidido morir y lo tendré que arreglar, intenta de nuevo más tarde.",
-    "posible_error2":"- Puede que tu aplicación este desactualizada, recomiendo que la actualices para poder procesar tu imágen en el servidor.",
-    "posible_error3":"- Se esta llevando a cabo mantenimiento o se estan implementando actualizaciones, intenta más tarde.",
-    "posible_error4":"- Mantener el servidor se ha vuelto muy caro, decidí detener el servicio y puede que nunca regrese. Espero que esta última no pase, pero en caso de que suceda, aún podrás procesar tus imágenes en tu dispositivo.",
+    "posible_error1":"- El servidor ha decidido morir y lo tendré que arreglar.",
+    "posible_error2":"- Conección al servidor inestable o perdida",
+    "posible_error3":"- Se esta llevando a cabo mantenimiento o se estan implementando actualizaciones.",
+    "posible_error4":"Por favor intente más tarde",
 
     "server_image_error":"Ocurrió un error mientras se procesaba tu imágen.",
     "large_errors":"Puede que tu imagen sea muy grande. O el servidor esta muy ocupado.",
